at1/main.tf
 terraform {
   required_version = ">= 0.13"

   required_providers {
     azurerm = {
      source = "hashicorp/azurerm"
      version = ">= 2.26"
    }
   }
 }

provider "azurerm" {
  features {
    resource_group {
      prevent_deletion_if_contains_resources = false
    }
  }
}


 resource "azurerm_resource_group" "rg-at1-apache" {
  name     = "at1apache"
  location = "australiaeast"
}


resource "azurerm_virtual_network" "vnet-at1" {
  name                = "vnet-at1"
  location            = azurerm_resource_group.rg-at1-apache.location
  resource_group_name = azurerm_resource_group.rg-at1-apache.name
  address_space       = ["10.0.0.0/16"]
  

  tags = {
    environment = "Develop",
    atividade = "at1-apache"
  }
}

resource "azurerm_subnet" "subnet-infra" {
  name                 = "sub-at1"
  resource_group_name  = azurerm_resource_group.rg-at1-apache.name
  virtual_network_name = azurerm_virtual_network.vnet-at1.name
  address_prefixes     = ["10.0.1.0/24"]
}

resource "azurerm_public_ip" "ip-infra" {
  name                = "ip-at1"
  resource_group_name = azurerm_resource_group.rg-at1-apache.name
  location            = azurerm_resource_group.rg-at1-apache.location
  allocation_method   = "Static"

  tags = {
    environment = "Develop"
  }
}

resource "azurerm_network_security_group" "nsg-infra" {
  name                = "nsg-at1"
  location            = azurerm_resource_group.rg-at1-apache.location
  resource_group_name = azurerm_resource_group.rg-at1-apache.name

  security_rule {
    name                       = "SSH"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

security_rule {
    name                       = "web"
    priority                   = 1003
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  tags = {
    environment = "Develop"
  }
}



resource "azurerm_network_interface" "nic-infra" {
  name                = "nic-at1"
  location            = azurerm_resource_group.rg-at1-apache.location
  resource_group_name = azurerm_resource_group.rg-at1-apache.name

  ip_configuration {
    name                          = "ip-at1-nic"
    subnet_id                     = azurerm_subnet.subnet-infra.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id = azurerm_public_ip.ip-infra.id
  }
}

resource "azurerm_network_interface_security_group_association" "nic-nsg-infra" {
  network_interface_id      = azurerm_network_interface.nic-infra.id
  network_security_group_id = azurerm_network_security_group.nsg-infra.id
}

resource "azurerm_virtual_machine" "vm-infra" {
  name                  = "vm-at1"
  location              = azurerm_resource_group.rg-at1-apache.location
  resource_group_name   = azurerm_resource_group.rg-at1-apache.name
  network_interface_ids = [azurerm_network_interface.nic-infra.id]
  vm_size               = "Standard_DS1_v2"


  storage_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "16.04-LTS"
    version   = "latest"
  }
  storage_os_disk {
    name              = "myosdisk1"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }
  os_profile {
    computer_name  = "hostname"
    admin_username = var.user
    admin_password = var.password
  }
  os_profile_linux_config {
    disable_password_authentication = false
  }
  tags = {
    environment = "staging"
  }
}

data "azurerm_public_ip" "ip-at1"{
    name = azurerm_public_ip.ip-infra.name
    resource_group_name = azurerm_resource_group.rg-at1-apache.name
}

resource "null_resource" "install-apache" {
  
   
  connection {
    type = "ssh"
    host = data.azurerm_public_ip.ip-at1.ip_address
    user = var.user
    password = var.password
  }

  provisioner "remote-exec" {
 
    inline = [
      "sudo apt upgrade",
        "sudo apt update",
        "sudo apt install -y apache2"
    ]
  }

  depends_on = [
    azurerm_virtual_machine.vm-infra
  ]
}
